# Otis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEPLOY.md  DESKTOP_APP.md  Dockerfile  LANDING_PAGE.md  LICENSE  Makefile  README.md  SYSTEM_STATUS.md  docker-compose.core.yml  docker-compose.fixed.yml  docker-compose.yml  index.html  main.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  styles-modern.css  styles.css  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  security-pipeline.yml  security.yml
config/: elastalert.yaml  vector.toml
config/elastalert/: ransomware_detection.yaml
desktop-app/: DESIGN.md  QUICK_START.md  README.md  SUMMARY.md  VISUAL_MOCKUP.md  build.sh
docker/: Dockerfile.api  Dockerfile.red-team  Dockerfile.runner  Dockerfile.sandbox
docs/: ACTUAL_ARCHITECTURE.md  API.md  ARCHITECTURE.md  A_PLUS_QUICK_REFERENCE.md  CRITICAL_FIXES.md  DEPLOYMENT.md  INCIDENT_RESPONSE_PLAN.md  RED_BLUE_TEAM_GUIDE.md  SECURITY_FIXES.md  SECURITY_POLICY.md  SECURITY_TESTING.md  SYNTHESIS_REPORT.md  THREAT_MODEL.md  USER_MANUAL.md  ZERO_TRUST_ARCHITECTURE.md  index.html  main.js  main.ts  package.json  styles.css  tsconfig.json
examples/: README.md
examples/anti_spam/: basic_classification.py
examples/blue_team/: threat_detection.py
examples/integration/: complete_workflow.py
examples/red_team/: attack_vectors.py
kubernetes/: deployment-secure.yaml
scripts/: bootstrap.sh  build_rag.py  create_admin.py  demo.sh  init_rag_data.py  install_and_test.sh  quickstart.sh
src/: App.tsx  __init__.py  index.css  main.py  tasks.py
src/adversarial/: attack_vectors.py  mdp_orchestrator.py  red_team_engine.py
src/agent/: __init__.py  model.py  react_agent.py
src/api/: __init__.py  agent.py  auth.py  dependencies.py  health.py  ingest.py
src/bot/: __init__.py  telegram_bot.py
src/cag/: __init__.py  cag_service.py
src/compliance/: nist_ai_rmf.py
src/components/: About.css  About.tsx  CTA.css  CTA.tsx  Capabilities.css  Capabilities.tsx  Footer.css  Footer.tsx  Hero.css  Hero.tsx  Tech.css  Tech.tsx
src/core/: __init__.py  config.py  logging.py  sanitization.py  security.py  tracing.py
src/database/: __init__.py  connection.py  repository.py
src/defensive/: blue_team_pipeline.py  remediation_engine.py  threat_detectors.py
src/infra/: __init__.py  logging.py
src/memory/: __init__.py  episodic.py  memory_system.py  procedural.py  semantic.py  working.py
src/model/: inference_engine.py
src/models/: __init__.py  database.py  schemas.py
src/rag/: __init__.py  index.py
src/reasoning/: __init__.py  absolute_zero.py  darwin_godel.py  planner.py  query_router.py  reasoning_engine.py
src/runner/: __init__.py  sandbox.py
src/security/: __init__.py  policy.py  policy_engine.py
src/services/: __init__.py  chroma.py  docker_sandbox.py  ollama.py  red_team_runner.py  telegram.py
src/static/: app.html
src/tools/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_blue_team.py  test_compliance.py  test_end_to_end.py  test_integration.py  test_model_robustness.py  test_red_team.py  test_threat_detection.py
(+17 files in other folders)
